--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Christopher Roy Bratusek <nano@jpberlin.de>
 Build-Depends: debhelper (>= 8), make
 Standards-Version: 3.9.4
-Homepage: http://nanolx.org/nanolx/patchimage
+Homepage: http://www.nanolx.org/nanolx/patchimage
 
 Package: patchimage
 Architecture: all
